fixed mobile header spacing

--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@ header {
   position: fixed;
   right: 0;
   left: 0;
+  top: 0;
   z-index: 1030;
   margin-top: 0;
   margin-bottom: 0;
